--- a/VorbereitungsProjektCampus02/VorbereitungsProjektCampus02.csproj
+++ b/VorbereitungsProjektCampus02/VorbereitungsProjektCampus02.csproj
@@ -65,6 +65,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="SuchWindow.xaml.cs">
+      <DependentUpon>SuchWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="AddNewProductWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -84,6 +87,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="SuchWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Product.cs" />
