--- a/VorbereitungsProjektCampus02/VorbereitungsProjektCampus02.csproj
+++ b/VorbereitungsProjektCampus02/VorbereitungsProjektCampus02.csproj
@@ -94,7 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Product.cs" />
-    <Compile Include="Models\ProduktDBContext.cs" />
+    <Compile Include="Models\ProduktDBContextV2.cs" />
     <Compile Include="Models\ProduktViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
